Bug #1122318 arm64: dts: sprd: add cp dvfs for sharkl5Pro
[root cause  ] no cp dvfs dt
[changes     ] add cp dvfs dt
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:ums512_1h10
[test case]:pubcp dvfs cmd
[reviewers   ] bo.jiang fei.zhang
[change_type ] feature_bugfix
[tag_product ] specific

Add pubcp and wtlcp dvfs device node on sharkl5Pro

Change-Id: I75552f78b9e0145ffaf48009bf685dc474dc4f0b
Signed-off-by: Bao Yue <bao.yue@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums512-modem.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512-modem.dtsi
@@ -221,13 +221,13 @@
 	};
 
 	dvfs_pubcp {
-		compatible = "sprd,sharkl5-pubcp-dvfs";
+		compatible = "sprd,sharkl5Pro-pubcp-dvfs";
 		sprd,core_id = <0>;
 		sprd,record_num = <10>;
 	};
 
 	dvfs_wtlcp {
-		compatible = "sprd,sharkl5-wtlcp-dvfs";
+		compatible = "sprd,sharkl5Pro-wtlcp-dvfs";
 		sprd,core_id = <1>;
 		sprd,record_num = <6>;
 	};
