Bug #1121109 arm: boot: Add the clock of sdio_1x_eb/sdio_2x_eb configurations in dts file.
[root cause  ] sd clk set failed
[changes     ] pike2.dtsi
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:normal test
[reviewers   ] Billows.Wu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Because the uart log print:"must check,sdio_sd set and on failed", and
we find that we forget to configure the clock of sdio_1x_eb/sdio_2x_eb
in sdio0 node.

Change-Id: Idcd8d8a7b518a20ac5fe706897fdee5ce180cbb2
Signed-off-by: xuefei.wang <xuefei.wang@unisoc.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -225,10 +225,13 @@
 				reg = <0x20300000 0x1000>;
 				interrupts = <GIC_SPI 57 IRQ_TYPE_LEVEL_HIGH>;
 				clock-names = "sdio_clk","sdio_clk_source",
-					      "sdio_ahb_enable";
+					      "sdio_ahb_enable","sdio_1x_eb",
+					      "sdio_2x_eb";
 				clocks = <&aon_clk CLK_SDIO0_2X>,
 					 <&pll CLK_TWPLL_384M>,
-					 <&apahb_gate CLK_SDIO0_EB>;
+					 <&apahb_gate CLK_SDIO0_EB>,
+					 <&aonapb_gate CLK_SDIO0_1X_EB>,
+					 <&aonapb_gate CLK_SDIO0_2X_EB>;
 				status = "disabled";
 			};
 
