Bug #1094376 arm: dts: add camera dts config
[root cause  ] camera bringup
[changes     ] dts
[side effects] no
[self test   ]:camera
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp7731e_1h10
[test case]:camera
[reviewers   ] ming.tang,yangyang.liu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add camera dts cfg.

Change-Id: If7cde7ee8f2786e5c4b7358ad2d4921845fcd289
Signed-off-by: Langbiao Tan <langbiao.tan@spreadtrum.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -566,6 +566,7 @@
 				sprd,ana-apb-syscon = <&aon_apb_regs>;
 				sprd,csi-id = <0>;
 				sprd,ip-version = <0x100>;
+				sprd,dcam-id = <0>;
 				status = "disable";
 			};
 
