--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1074,6 +1074,7 @@ dtb-$(CONFIG_ARCH_SPRD) += \
 	sp9832e-1h10-gofu.dtb \
 	sp9863a-1h10_go_32b_Natv.dtb \
 	sp7731e-1h10-native.dtb \
+	sp7731e-1h20-native.dtb \
 	ums312-1h10-go.dtb \
 	ums312-2h10-go.dtb
 
@@ -1081,6 +1082,7 @@ dtbo-$(CONFIG_ARCH_SPRD) += \
 	sp9832e-1h10-gofu-overlay.dtbo \
 	sp9863a-1h10_go_32b_Natv-overlay.dtbo \
 	sp7731e-1h10-overlay.dtbo \
+	sp7731e-1h20-overlay.dtbo \
 	ums312-1h10-go-overlay.dtbo \
 	ums312-2h10-go-overlay.dtbo
 endif
