Bug #1087256 arm: dts: Add dts configurations related to sw dvfs in sharkle
[root cause  ] The necessary configurations for sw dvfs
[changes     ] Modify dts to support sw dvfs
[self test   ]: dvfs test
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp9832e-1h10-gofu
[test case]:dvfs test,reboot test,sleep wakeup
[reviewers   ] jack.liu ling_ling.xu jingchao.ye sheng.zhu
[change_type ] AOB --> sprd_adaptation
[tag_product ] common

Add dts configurations related to sw dvfs in sharkle androidq project

Change-Id: I4922862c09a1ff90512ea4c7e25f21bc85d09044
Signed-off-by: Jack Liu <jack.liu@spreadtrum.com>

--- a/arch/arm/boot/dts/sc9832e.dtsi
+++ b/arch/arm/boot/dts/sc9832e.dtsi
@@ -39,6 +39,7 @@
 			reg = <0x0>;
 			enable-method = "psci";
 			cpu-idle-states = <&CORE_PD &CLUSTER_PD>;
+			cpufreq-data-v1 = <&cpufreq_clus0>;
 		};
 		cpu1: cpu@1 {
 			device_type = "cpu";
@@ -46,6 +47,7 @@
 			reg = <0x1>;
 			enable-method = "psci";
 			cpu-idle-states = <&CORE_PD &CLUSTER_PD>;
+			cpufreq-data-v1 = <&cpufreq_clus0>;
 		};
 		cpu2: cpu@2 {
 			device_type = "cpu";
@@ -53,6 +55,7 @@
 			reg = <0x2>;
 			enable-method = "psci";
 			cpu-idle-states = <&CORE_PD &CLUSTER_PD>;
+			cpufreq-data-v1 = <&cpufreq_clus0>;
 		};
 		cpu3: cpu@3 {
 			device_type = "cpu";
@@ -60,6 +63,7 @@
 			reg = <0x3>;
 			enable-method = "psci";
 			cpu-idle-states = <&CORE_PD &CLUSTER_PD>;
+			cpufreq-data-v1 = <&cpufreq_clus0>;
 		};
 	};
 
@@ -81,6 +85,195 @@
 			local-timer-stop;
 			arm,psci-suspend-param = <0x01010000>;
 		};
+	};
+
+	cpufreq_clus0: cpufreq-clus0 {
+		clocks = <&apahb_gate CLK_MCU>,
+			<&pll CLK_TWPLL_768M>,
+			<&mpll CLK_MPLL>;
+		clock-names = "core_clk",
+			"low_freq_clk_parent",
+			"high_freq_clk_parent";
+		clock-latency = <50000>;
+		voltage-tolerance = <0>;
+		sprd,efuse-blk-binning-low-volt = <39 0x20000000>;
+		sprd,efuse-blk-binning = <39 0xf00>;
+		sprd,cpufreq-temp-threshold = <65>;
+		sprd,ss-waferid-names =
+			"T8F619_1","T8F619_2",
+			"T8F619_3","T8F619_4",
+			"T8F619_6","T8F619_7",
+			"T8F619_8","T8F619_10",
+			"T8F619_11","T8F619_12",
+			"T8F619_13","T8F619_15",
+			"T8F619_16","T8F619_18",
+			"T8F619_19","T8F619_20",
+			"T8F619_22","T8F619_23",
+			"T8F619_24","T8F619_25",
+			"T8F622_1","T8F622_2",
+			"T8F622_3","T8F622_4",
+			"T8F622_5","T8F622_6",
+			"T8F801_1","T8F801_2",
+			"T8F801_4","T8F801_3",
+			"T9S964_1";
+		operating-points = <
+			/* kHz  uV */
+			1300000 1100000
+			1100000 1000000
+			900000 900000
+			768000 900000>;
+		operating-points-1-0 = <
+			/* kHz	uV */
+			/*1500000 1056250*/
+			1400000	1021875
+			1300000	 987500
+			1100000	 918750
+			 900000	 900000
+			 768000	 900000>;
+		operating-points-2-0 = <
+			/* kHz	uV */
+			/*1500000 1109375*/
+			1400000	1071875
+			1300000	1034375
+			1100000	 959375
+			 900000	 900000
+			 768000	 900000>;
+		operating-points-3-0 = <
+			/* kHz	uV */
+			1400000	1121875
+			1300000	1081250
+			1100000	1000000
+			 900000	 921875
+			 768000	 900000>;
+		operating-points-4-0 = <
+			/* kHz	uV */
+			1400000	1150000
+			1300000	1112500
+			1100000	1034375
+			 900000	 953125
+			 768000	 900000>;
+		operating-points-1-1 = <
+			/* kHz	uV */
+			/*1500000 1056250*/
+			1400000	1021875
+			1300000	 987500
+			1100000	 918750
+			 900000	 850000
+			 768000	 850000>;
+		operating-points-2-1 = <
+			/* kHz	uV */
+			/*1500000 1109375*/
+			1400000	1071875
+			1300000	1034375
+			1100000	 959375
+			 900000	 881250
+			 768000	 850000>;
+		operating-points-3-1 = <
+			/* kHz	uV */
+			1400000	1121875
+			1300000	1081250
+			1100000	1000000
+			 900000	 921875
+			 768000	 868750>;
+		operating-points-4-1 = <
+			/* kHz	uV */
+			1400000	1150000
+			1300000	1112500
+			1100000	1034375
+			 900000	 953125
+			 768000	 900000>;
+		operating-points-1-0-65 = <
+			/* kHz	uV */
+			/*1500000 1084375*/
+			1400000	1043750
+			1300000	1003125
+			1100000	 921875
+			 900000	 900000
+			 768000	 900000>;
+		operating-points-2-0-65 = <
+			/* kHz	uV */
+			/*1500000 1140625*/
+			1400000	1096875
+			1300000	1053125
+			1100000	 965625
+			 900000	 900000
+			 768000	 900000>;
+		operating-points-3-0-65 = <
+			/* kHz	uV */
+			1400000	1150000
+			1300000	1106250
+			1100000	1015625
+			 900000	 925000
+			 768000	 900000>;
+		operating-points-4-0-65 = <
+			/* kHz	uV */
+			/*1400000 1181250*/
+			1300000	1137500
+			1100000	1050000
+			 900000	 959375
+			 768000	 900000>;
+		operating-points-1-1-65 = <
+			/* kHz	uV */
+			/*1500000 1084375*/
+			1400000	1043750
+			1300000	1003125
+			1100000	 921875
+			 900000	 900000
+			 768000	 900000>;
+		operating-points-2-1-65 = <
+			/* kHz	uV */
+			/*1500000 1140625*/
+			1400000	1096875
+			1300000	1053125
+			1100000	 965625
+			 900000	 900000
+			 768000	 900000>;
+		operating-points-3-1-65 = <
+			/* kHz	uV */
+			1400000	1150000
+			1300000	1106250
+			1100000	1015625
+			 900000	 925000
+			 768000	 900000>;
+		operating-points-4-1-65 = <
+			/* kHz	uV */
+			/*1400000 1181250*/
+			1300000	1137500
+			1100000	1050000
+			 900000	 959375
+			 768000	 900000>;
+		operating-points-3 = <
+			/* kHz	uV */
+			1400000	1121875
+			1300000	1081250
+			1100000	1000000
+			 900000	 921875
+			 768000	 900000>;
+		operating-points-4 = <
+			/* kHz	uV */
+			1400000	1150000
+			1300000	1112500
+			1100000	1034375
+			 900000	 953125
+			 768000	 900000>;
+		operating-points-3-65 = <
+			/* kHz	uV */
+			1400000	1150000
+			1300000	1106250
+			1100000	1015625
+			 900000	 925000
+			 768000	 900000>;
+		operating-points-4-65 = <
+			/* kHz	uV */
+			/*1400000 1181250*/
+			1300000	1137500
+			1100000	1050000
+			 900000	 959375
+			 768000	 900000>;
+	};
+
+	sprd_swdvfs: sprd-swdvfs {
+		compatible = "sprd,sharkle-swdvfs";
 	};
 
 	psci {
