--- a/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
+++ b/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
@@ -377,3 +377,19 @@
 &csi1 {
 	status = "okay";
 };
+
+&cpu0 {
+	cpu-supply = <&vddcpu>;
+};
+
+&cpu1 {
+	cpu-supply = <&vddcpu>;
+};
+
+&cpu2 {
+	cpu-supply = <&vddcpu>;
+};
+
+&cpu3 {
+	cpu-supply = <&vddcpu>;
+};
