--- a/arch/arm/configs/sprd_sharkle_defconfig
+++ b/arch/arm/configs/sprd_sharkle_defconfig
@@ -651,6 +651,9 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 # CONFIG_CPUFREQ_DT is not set
 # CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
+# CONFIG_ARM_SPRD_HW_CPUFREQ is not set
+CONFIG_ARM_SPRD_SW_CPUFREQ=y
+# CONFIG_ARM_SPRD_DUMMY_CPUFREQ is not set
 # CONFIG_QORIQ_CPUFREQ is not set
 
 #
