Bug #1120545 arm64: dts: sprd: Enable SD card fast hotplug
[root cause ] need config
[changes ] add config
[side effects] no
[self test ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: no
[is there dependence]: no
[confirm dependent commit]: no
[board]: sharkl5Pro
[test case]: normal test
[reviewers ] Billows Wu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Enable SD card fast hotplug.

Signed-off-by: Fangkui Zhong <fangkui.zhong@unisoc.com>
Change-Id: I1ee4104bb71cce521efaf30920c1b4aad7f824ed

--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -525,6 +525,15 @@
 
 &sdio0 {
 	cd-gpios = <&eic_sync 19 GPIO_ACTIVE_HIGH>;
+	syscons = <&aon_apb_regs REG_AON_APB_RF_AP_SDIO0_PHY_CTRL MASK_AON_APB_RF_AP_SDIO0_CARD_PRESENT_32K>,
+		  <&aon_apb_regs REG_AON_APB_RF_AP_SDIO0_PHY_CTRL MASK_AON_APB_RF_AP_SDIO0_CARD_PROTECT_32K>,
+		  <&aon_apb_regs REG_AON_APB_RF_AP_SDIO0_PHY_CTRL MASK_AON_APB_RF_AP_SDIO0_CARDDET_DBNC_EN_32K>,
+		  <&aon_apb_regs REG_AON_APB_RF_AP_SDIO0_PHY_CTRL MASK_AON_APB_RF_AP_SDIO0_CARDDET_DBNC_THD_32K>;
+	syscon-names = "sd_detect_pol",
+		       "sd_hotplug_protect_en",
+		       "sd_hotplug_debounce_en",
+		       "sd_hotplug_debounce_cn";
+
 };
 
 &pwms {
