Bug #1110298 arm64: dts: Add slack timer for sharkL5Pro
[root cause  ] sharkL5Pro has no hardware auto scaling for dvfs under WFI
[changes     ] add sugov_slack_timer in dts for sharkL5Pro
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:sharkL5Pro
[test case]:cpuidle,scheduler
[reviewers   ]
[change_type ] feature
[tag_product ] common

1. In schedutil, the dts parsing logic will search the key string of
'sugov_slack_timer' in cpu node to decide whether enable the slack timer.
2. The purpose of this timer is to prevent high frequency from
entering the cpuidle.

Change-Id: Iccf39c4672cdd902ce438aea94cac9609e99cc6f
Signed-off-by: samer.xie <samer.xie@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums512.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512.dtsi
@@ -55,6 +55,7 @@
 			cpufreq-data-v1 = <&cpufreq_clus0>;
 			sched-energy-costs = <&CPU_COST_0 &CLUSTER_COST_0>;
 			capacity-dmips-mhz = <544>;
+			sugov_slack_timer;
 		};
 		CPU1: cpu@100 {
 			device_type = "cpu";
