Bug #1122318 arm64: configs: Enable pubcp dvfs config
[root cause  ] pubcp dvfs not enable
[changes     ] enable pubcp dvfs
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:ums512-1h10
[test case]:boot and modem dvfs
[reviewers   ] bo.jiang wenping.zhou
[change_type ] feature_bugfix
[tag_product ] specific

Enable pubcp dvfs debug function.

Change-Id: Ied5753e3e34e529e26c333ac6b52c3fecc937635
Signed-off-by: Bao Yue <bao.yue@unisoc.com>

--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -3490,7 +3490,7 @@ CONFIG_SPRD_CPROC=y
 # SPRD IQ modules
 #
 CONFIG_SPRD_IQ=y
-# CONFIG_SPRD_HW_DEVICE_DVFS_CP is not set
+CONFIG_SPRD_HW_DEVICE_DVFS_CP=y
 # CONFIG_SPRD_MCD is not set
 # CONFIG_SPRD_MODEM_LOADER is not set
 # CONFIG_SPRD_CRYPTO is not set
