Bug #1103428 arm64: dts: sprd: add charger pd pin for pimic
[root cause  ] add charger pd pin for pimic
[changes     ] dts
[side effects] N0
[self test   ]:Charge function
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:NA
[is there dependence]:NA
[confirm dependent commit]:NA
[board]:ums512-1h10/ums312-2h10/s9863a1h10
[test case]:Charge
[reviewers   ] yuanjiang.yu
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

add charger pd pin to control charge for each pimic.

Change-Id: I7daae7f8770e92baba128fcadb0841edbc9088ba
Signed-off-by: Jinfeng Lin1 <jinfeng.lin1@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/sc2721.dtsi
+++ b/arch/arm64/boot/dts/sprd/sc2721.dtsi
@@ -128,7 +128,7 @@
 
 		syscon@c00 {
 			compatible = "sprd,sc27xx-syscon";
-			reg = <0xc00>, <0xecc>;
+			reg = <0xc00>, <0xecc>, <0xec0>;
 		};
 
 		sprd_audio_codec_ana: audio-codec@700 {
