Bug #1128327 arm: dts: Add flash sc2720 bring up in andorid q
[root cause  ] add flash sc2720 bring up in andorid q
[changes     ] no
[side effects] no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:startup normally torch open normally
[reviewers   ] hai.li
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Add flash sc2720 bring up in andorid q.

Change-Id: Ic5b0f3456cf7446fbfd1bf4c18f8c00f1c902f05
Signed-off-by: Steven Ying <steven.ying@spreadtrum.com>

--- a/arch/arm/boot/dts/sc2720.dtsi
+++ b/arch/arm/boot/dts/sc2720.dtsi
@@ -39,6 +39,12 @@
 			};
 		};
 
+		pmic_flash: flash@1f4 {
+			compatible = "sprd,sc2720-flash";
+			reg = <0x1f4>;
+			status = "disabled";
+		};
+
 		rtc@200 {
 			compatible = "sprd,sc27xx-rtc", "sprd,sc2720-rtc";
 			reg = <0x200>;
