Bug #1097688 arm: dts: Pike2 project charging configuration
[root cause  ] pike2 project charging configuration
[changes     ] pike2 project charging configuration
[side effects] no
[self test   ]:
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: pike2
[test case]: compile ok
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Charging configuration for pike2, include charging current, fuel gauge parameter configuration.

Change-Id: I3785c083fd1b7a66e52e0b109d631b1c6f1f075d
Signed-off-by: Yuanjiang Yu <yuanjiang.yu@unisoc.com>

--- a/arch/arm/boot/dts/sp7731e-1h10-native.dts
+++ b/arch/arm/boot/dts/sp7731e-1h10-native.dts
@@ -114,8 +114,8 @@
 		capacity-temp-table = <25 100>, <10 97>, <(-10) 60>;
 		resistance-temp-table = <20 100>, <10 243>, <(-10) 468>;
 		charge-sdp-current-microamp = <500000 500000>;
-		charge-dcp-current-microamp = <2000000 3000000>;
-		charge-cdp-current-microamp = <1150000 1150000>;
+		charge-dcp-current-microamp = <1000000 1000000>;
+		charge-cdp-current-microamp = <1000000 1000000>;
 		charge-unknown-current-microamp = <500000 500000>;
 	};
 
@@ -165,9 +165,10 @@
 			<1150 1180 700000 4350000>, <1450 1420 2000000 4350000>,
 			<1600 1570 700000 4100000>;
 		regulator@0 {
-			cm-regulator-name = "vddgen0";
+			cm-regulator-name = "vddgen";
 			cable@0 {
 				cm-cable-name = "USB";
+				extcon = <&extcon_gpio>;
 			};
 		};
 	};
@@ -348,6 +349,14 @@
 
 &pmic_charger {
 	status = "okay";
+	phys = <&hsphy>;
+	monitored-battery = <&bat>;
+};
+
+&pmic_fgu {
+	monitored-battery = <&bat>;
+	sprd,calib-resistance-real = <20000>;
+	sprd,calib-resistance-spec = <20000>;
 };
 
 &pwms {
