Bug #1100405 arm: dts: add fd_resserved for pike2
[root cause  ] Q faceid bringup
[changes     ] add fd_resserved for pike2
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:compile pass
[reviewers   ] Wenan Hu
[change_type ] bringup --> sprd_chip_support
[tag_product ] specific

add fd_resserved for pike2.

Change-Id: Ie548b43dca4f420f8d7f5b8d38eecdaf9e966cc9
Signed-off-by: Sheng Xu <sheng.xu@unisoc.com>

--- a/arch/arm/boot/dts/sp7731e-1h10-native.dts
+++ b/arch/arm/boot/dts/sp7731e-1h10-native.dts
@@ -64,6 +64,23 @@
 		};
 	};
 
+	sprd-map-user {
+		compatible = "sprd,map-user";
+	};
+
+	ion {
+		compatible = "sprd,ion";
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		heap@4 {
+			reg = <4>;
+			label = "carveout_fd";
+			type = <2>;
+			memory-region = <&fd_reserved>;
+		};
+	};
+
 	tboard_thermistor:thermal-sensor {
 		compatible = "generic-adc-thermal";
 		#thermal-sensor-cells = <0>;
@@ -191,7 +208,11 @@
 
 &reserved_memory {
 	tos_reserved: tos-mem@94020000 {
-		reg = <0x94020000 0x001fe0000>;
+		reg = <0x94020000 0x01fe0000>;
+	};
+
+	fd_reserved: fd@96000000{
+		reg = <0x96000000 0x00500000>;
 	};
 };
 
