Bug #1128782 arm: dts: fix camera iommu format issues
[root cause  ] for bringup
[changes     ] fix camera iommu format issues
[side effects]no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:pike2
[test case]:compile pass
[reviewers   ] Wenan Hu
[change_type ] bringup --> sprd_chip_support
[tag_product ] specific

fix camera iommu format issues.

Change-Id: Ib5b4f0a70130e9b67a95a7f0ed01e14b0b7db8f7
Signed-off-by: Sheng Xu <sheng.xu@unisoc.com>

--- a/arch/arm/boot/dts/pike2.dtsi
+++ b/arch/arm/boot/dts/pike2.dtsi
@@ -500,10 +500,10 @@
 			iommu_dcam: iommu@60800000 {
 				compatible = "sprd,iommuexpk2-dcam";
 				reg = <0x60800000 0x200>,
-					<0x60800200 0x60>,
-					<0x40000000 0x10000000>;
-				reg_name = "mmu_interrupt_reg","mmu_reg",
-						"iova pool";
+					<0x60800200 0x60>;
+				iova-base = <0x40000000>;
+				iova-size = <0x10000000>;
+				reg_name = "mmu_interrupt_reg","mmu_reg";
 				status = "disabled";
 				#iommu-cells = <0>;
 			};
@@ -523,10 +523,10 @@
 			iommu_isp: iommu@60a00000 {
 				compatible = "sprd,iommuexpk2-isp";
 				reg = <0x60a00000 0x800>,
-					<0x60a00800 0x400>,
-					<0x50000000 0x10000000>;
-				reg_name = "mmu_interrupt_reg","mmu_reg",
-					"iova pool";
+					<0x60a00800 0x400>;
+				iova-base = <0x50000000>;
+				iova-size = <0x10000000>;
+				reg_name = "mmu_interrupt_reg","mmu_reg";
 				status = "disabled";
 				#iommu-cells = <0>;
 			};
