--- a/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512-mach.dtsi
@@ -38,6 +38,22 @@
 			>;
 	};
 
+	vsp_dvfs: vsp-dvfs {
+		compatible = "sprd,hwdvfs-vsp-sharkl5pro";
+		sprd,dvfs-work-freq = <384000000>;
+		sprd,dvfs-idle-freq = <256000000>;
+		sprd,dvfs-enable-flag = <0>;
+		sprd,freq-upd-delay-en = <0>;
+		sprd,freq-upd-hdsk-en = <1>;
+
+		operating-points = <
+			/* kHz    uV */
+			256000    700000
+			307200    700000
+			384000    750000
+			>;
+	};
+
 	firmware {
 		android {
 			compatible = "android,firmware";
