--- a/arch/arm/configs/sprd_pike2_defconfig
+++ b/arch/arm/configs/sprd_pike2_defconfig
@@ -662,11 +662,13 @@ CONFIG_ARM_SPRD_SW_CPUFREQ=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
+CONFIG_DT_IDLE_STATES=y
 
 #
 # ARM CPU Idle Drivers
 #
 # CONFIG_ARM_CPUIDLE is not set
+CONFIG_ARM_SPRD_CPUIDLE=y
 # CONFIG_ARM_HIGHBANK_CPUIDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 
