--- a/arch/arm64/configs/sprd_sharkl5Pro_defconfig
+++ b/arch/arm64/configs/sprd_sharkl5Pro_defconfig
@@ -604,6 +604,7 @@ CONFIG_DT_IDLE_STATES=y
 # ARM CPU Idle Drivers
 #
 CONFIG_ARM_CPUIDLE=y
+# CONFIG_ARM_SPRD_CPUIDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 
 #
