--- a/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
+++ b/arch/arm/boot/dts/sp9832e-1h10-gofu.dts
@@ -12,6 +12,7 @@
 #include "sp9832e-go-mach.dtsi"
 #include "sc9832e-wcn.dtsi"
 #include "sc2721.dtsi"
+#include "sprd-sound-sharkl.dtsi"
 #include "lcd/lcd_ili9881c_truly_mipi_hd.dtsi"
 
 / {
@@ -334,6 +335,27 @@
 	monitored-battery = <&bat>;
 	sprd,calib-resistance-real = <20000>;
 	sprd,calib-resistance-spec = <20000>;
+};
+
+&i2s0 {
+	status = "okay";
+};
+
+&sprd_audio_codec_ana {
+	status = "okay";
+	digital-codec = <&sprd_audio_codec_dig>;
+};
+
+&sprd_headset {
+	status = "okay";
+};
+
+&sound_vbc_r1p0v3_sprd_codec {
+	status = "okay";
+};
+
+&sound_sprd_ap_alliis {
+	status = "okay";
 };
 
 &pwms {
