--- a/arch/arm/boot/dts/sharkle.dtsi
+++ b/arch/arm/boot/dts/sharkle.dtsi
@@ -401,7 +401,7 @@
 				reg = <0x21900000 0xc000>;
 				interrupts = <GIC_SPI 43 IRQ_TYPE_LEVEL_HIGH>;
 
-				syscons = <&mm_ahb_regs REG_AP_AHB_AHB_RST
+				syscons = <&ap_ahb_regs REG_AP_AHB_AHB_RST
 					MASK_AP_AHB_VSP_SOFT_RST>,
 					<&pmu_apb_regs
 					REG_PMU_APB_PD_MM_TOP_CFG
