Bug #1129976 arm: dts: enable spi1 for microarray fingerprint
[root cause  ] fingerprint spi has not been enabled
[changes     ] enable spi1 in dts
[side effects] None
[self test   ]:Pass
[download normally]:Yes
[power on/off normally]:Yes
[do common repository/branch inspection]:Yes
[is there dependence]:No
[confirm dependent commit]:No
[board]:sp7731e_1h10_native
[test case]:fingerprint driver test
[reviewers   ] Arvin.Wu Team
[change_type ] feature
[tag_product ] specific

Enable spi1 for microarray fingerprint in dts.

Change-Id: I41b0e02a136b9fe419ec1d8ada3f85a1ac2fe491
Signed-off-by: Pan.Yang <Pan.Yang@spreadtrum.com>

--- a/arch/arm/boot/dts/sp7731e-1h10-native.dts
+++ b/arch/arm/boot/dts/sp7731e-1h10-native.dts
@@ -392,6 +392,14 @@
 	cpu-supply = <&vddcore>;
 };
 
+&spi1 {
+	/*used for fingerprint sensor*/
+	clock-names ="enable", "spi", "source";
+	clocks = <&aonapb_gate CLK_AP_HS_SPI_EB>,
+		<&aon_clk CLK_AP_HS_SPI>, <&pll CLK_TWPLL_192M>;
+	status = "okay";
+};
+
 &pmic_flash {
 	status = "okay";
 };
