Bug #1107966 arm64: dts: Modify the fgu configuration for pmic2721
[root cause  ] Modify the fgu configuration for pmic2721
[changes     ] Modify the fgu configuration for pmic2721
[side effects] no
[self test   ]:
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: no
[board]: Sharkl3-1
[test case]: compile ok
[reviewers   ] baolin.wang
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Due to the pmic 2721 module enable and rtc clock enable configuration are
the same as pmic 2720, so we use sc2720's configuration.

Change-Id: I1539a0c8e8df8f98c5aafc7532bc4b6187409336
Signed-off-by: Yuanjiang Yu <yuanjiang.yu@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/sc2721.dtsi
+++ b/arch/arm64/boot/dts/sprd/sc2721.dtsi
@@ -115,7 +115,7 @@
 		};
 
 		pmic_fgu: fgu@a00 {
-			compatible = "sprd,sc27xx-fgu", "sprd,sc2731-fgu";
+			compatible = "sprd,sc27xx-fgu", "sprd,sc2720-fgu", "sprd,sc2721-fgu";
 			reg = <0xa00>;
 			bat-detect-gpio = <&pmic_eic 9 0>;
 			nvmem-cell-names = "fgu_calib";
