--- a/arch/arm64/boot/dts/sprd/ums512-1h10.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10.dts
@@ -146,21 +146,21 @@
 
 	bat: battery {
 		compatible = "simple-battery";
-		charge-full-design-microamp-hours = <2780000>;
+		charge-full-design-microamp-hours = <3690000>;
 		charge-term-current-microamp = <120000>;
-		constant_charge_voltage_max_microvolt = <4350000>;
-		factory-internal-resistance-micro-ohms = <320000>;
+		constant_charge_voltage_max_microvolt = <4400000>;
+		factory-internal-resistance-micro-ohms = <147000>;
 		voltage-min-design-microvolt = <3450000>;
 		ocv-capacity-celsius = <20>;
-		ocv-capacity-table-0 = <4360000 100>, <4249000 95>, <4189000 90>,
-					<4133000 85>, <4081000 80>, <4034000 75>,
-					<3991000 70>, <3953000 65>, <3910000 60>,
-					<3866000 55>, <3836000 50>, <3813000 45>,
-					<3795000 40>, <3782000 35>, <3774000 30>,
-					<3765000 25>, <3750000 20>, <3726000 15>,
-					<3687000 10>, <3658000 5>, <3400000 0>;
+		ocv-capacity-table-0 = <4380000 100>, <4317000 95>, <4258000 90>,
+					<4200000 85>, <4145000 80>, <4092000 75>,
+					<4047000 70>, <3990000 65>, <3955000 60>,
+					<3900000 55>, <3861000 50>, <3834000 45>,
+					<3813000 40>, <3796000 35>, <3783000 30>,
+					<3770000 25>, <3752000 20>, <3730000 15>,
+					<3698000 10>, <3687000 5>, <3400000 0>;
 		charge-sdp-current-microamp = <500000 500000>;
-		charge-dcp-current-microamp = <1200000 3000000>;
+		charge-dcp-current-microamp = <1150000 3000000>;
 		charge-cdp-current-microamp = <1150000 1150000>;
 		charge-unknown-current-microamp = <500000 500000>;
 	};
@@ -174,7 +174,7 @@
 
 		cm-fullbatt-vchkdrop-ms = <30000>;
 		cm-fullbatt-vchkdrop-volt = <60000>;
-		cm-fullbatt-voltage = <4300000>;
+		cm-fullbatt-voltage = <4350000>;
 		cm-fullbatt-current = <120000>;
 		cm-fullbatt-capacity = <100>;
 
@@ -183,13 +183,15 @@
 		cm-fuel-gauge = "sc27xx-fgu";
 
 		/* in deci centigrade */
-		cm-battery-cold = <50>;
+		cm-battery-cold = <200>;
 		cm-battery-cold-in-minus;
 		cm-battery-hot = <800>;
 		cm-battery-temp-diff = <100>;
 
 		/* Allow charging for 6hr */
-		cm-charging-max = <18000000>;
+		cm-charging-max = <21600000>;
+		/* recovery charging after stop charging 3hr */
+		cm-discharging-max = <10800000>;
 
 		/* the interval to feed charger watchdog */
 		cm-wdt-interval = <60>;
